--- a/index.html
+++ b/index.html
@@ -121,13 +121,16 @@
         <section id="whygladiators" class="py-5">
             <div class="container">
               <h1 class="text-white text-center text-md-left">Por quê Gladiators?</h1>
-              <h5 class="text-center text-md-left text-white">Em todos os projetos realizados pela nossa agência utilizamos
-                  a Metodologia PDCA. Esta metodologia foi desenvolvida pela Toyota
-                  como um clico de aplicar melhorias contínuas em seus processos.
-                  Uma de suas ferramentas é o ciclo PDCA - O Ciclo PDCA possui
-                  uma vasta área de aplicação, podendo ser útil a diferentes tipos
-                  de empreendimentos, pois atua em diversas frentes focando na 
-                  melhoria contínua.
+              <h5 class="text-center text-md-left text-white">
+                Através de uma boa análise estratégica conseguimos definir
+                o melhor plano para aplicarmos em sua empresa. É por isso que 
+                nossa especialidade é trazer resultados, nosso foco é fazer
+                que você ganhe dinheiro e desenvolva um bom engajamento.
+                Analisamos sua comunicação por completo, identificamos onde está
+                falhando e o que pode melhorar.
+                Nosso desenvolvimento criativo, estratégia de Marketing e Desenvolvimento
+                tenta trazer a melhor experiência de usuário e que você alcance
+                todos os seus objetivos.
               </h5>
           </div>
         </section>
