--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-item nav-link effect" href="servicos.html">SERVIÇOS</a>
                 <a class="nav-item nav-link effect" href="contato.html">CONTATO</a>
             </div>
-            <a class="solicitarbutton" href="https://api.whatsapp.com/send?phone=11974515557" target="_blank">SOLICITAR ORÇAMENTO</a>
+            <a class="solicitarbutton" href="https://api.whatsapp.com/send?phone=5511974515557" target="_blank">SOLICITAR ORÇAMENTO</a>
             </div>
         </div>
       </nav>
@@ -36,7 +36,7 @@
                 Descubra como nossas estratégias de Marketing podem fazer com que seu negócio venda mais.
             </h4>
             <div class="d-flex justify-content-center">
-             <a class="sabermaisbutton" href="https://api.whatsapp.com/send?phone=11974515557" target="_blank">Saber Mais</a>
+             <a class="sabermaisbutton" href="https://api.whatsapp.com/send?phone=5511974515557" target="_blank">Saber Mais</a>
             </div>
           </div>
         </section>
@@ -79,12 +79,11 @@
             <div class="container d-md-flex align-items-center">
                 <div class="col-12 col-md-6">
                     <h5 class="text-center text-md-left">
-                    A Gladiators atua na área de publicidade e propaganda,
-                    marketing digital e inovação tecnológica. Construímos e
-                    desenvolvemos ideias para que seu negócio gere engajamento,
-                    desenvolvemos uma experiência única para o usuário.
-                    Pensamos, inovamos e desenvolvemos o melhor para que sua
-                    marca, produto ou empresa gere vendas.
+                      O marketing digital assume uma importância cada vez maior,
+                      uma vez que as relações empresariais ocorrem digitalmente, 
+                      porque  investir em marketing digitalé a garantia de construção 
+                      de novas relações de negócios,onde apenas o ambiente digital é capaz 
+                      de proporcionarnovas oportunidades para o crescimento empresarial.
                     </h5>
                 </div>
                 <div class="col-12 col-md-6 imgshadow">
@@ -188,7 +187,7 @@
                   Descubra o que podemos fazer por você!
               </h5>
               <div class="d-flex justify-content-center mt-5">
-              <a class="d-flex justify-content-center queroconsultoria" href="https://api.whatsapp.com/send?phone=11974515557" target="_blank">Quero consultoria</a>
+              <a class="d-flex justify-content-center queroconsultoria" href="https://api.whatsapp.com/send?phone=5511974515557" target="_blank">Quero consultoria</a>
             </div>
             </div>
             
